...
    ) {
        OutlinedTextField(
            value = messageText,
            onValueChange = onMessageTextChanged,
            modifier = Modifier
                .weight(1f)
                .testTag("message_input")
                .imePadding(),
            shape = RoundedCornerShape(24.dp),
            maxLines = 4,
            colors = OutlinedTextFieldDefaults.colors(
                focusedBorderColor = if (messageText.isNotBlank())PrimaryPink else LightGray,
                unfocusedBorderColor = LightGray,
...
